# azuma

./: .gitignore  .pre-commit-config.yml  pyproject.toml
azuma/: launch.py
azuma/database/: __init__.py  connection.py
azuma/database/models/: guilds.py
azuma/extensions/: settings.py
azuma/utils/: __init__.py  prefixes.py
scripts/: run.bat  run.sh
